--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "cartoon politics website",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
